# CrossTheRoad

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
include/: Car.h  Character.h  Client.h  Constants.h  Player.h  Server.h
src/: Car.cpp  Character.cpp  Client.cpp  Player.cpp  Server.cpp  main.cpp
testing/: CMakeLists.txt  test_car.cpp  test_main.cpp  test_network.cpp  test_player.cpp
